# gtksword

./: Makefile  Makefile.am  Makefile.in  cheatah.cpp  cheatah.h  cheatsig.cpp  cheatsig.h  configure  configure.in  mkinstalldirs
save/: Makefile.am  cheatah.glade  configure.in
